# Gesture

./: LICENSE  README.md
UseCases/Jitsi/jitsi-caption-app/: README.md  package-lock.json  package.json
UseCases/SIGNIT/: README.md  index.html  package-lock.json  package.json
UseCases/SIGNIT/src/: ASLSession.tsx  App.tsx  Rules.tsx  index.css  main.tsx
UseCases/Website/: README.md  package.json  tailwind.config.ts  tsconfig.json
UseCases/Website/app/: globals.css  layout.tsx  page.tsx
UseCases/Website/components/: DownloadCard.tsx  Footer.tsx  Navbar.tsx
V1-2/TGCN/: README.md  chatbot.py  requirements.txt
V1-2/V1/: .env_example  .gitignore  README.md  collect_photos.py  data_formatter.py  inference.py  model_training.py  requirements.txt
V1-2/fall-2025/: mediapipe_extraction.py  view_3d_landmarks.ipynb
fall-2025/: .gitignore
fall_2025/: __init__.py
fall_2025/CV/: .gitignore  TRAINING_TUTORIAL.md  main.py  preprocess_videos.py  preprocess_videos.sh  pyproject.toml  temp.py  train.sh  utils.py  verify_alignment.py
fall_2025/CV/configs/: README.md  config.yaml  google_config.yaml
fall_2025/CV/data/: google_gloss_map.csv
fall_2025/CV/src/augmentation/: augmentation_parquet.py
fall_2025/CV/src/data_loading/: __init__.py  parquet_data_loader.py
fall_2025/CV/src/data_loading/utils/: pose_utils.py  utils.py
fall_2025/CV/src/data_preprocessing/: test_preprocess.py  video_preprocessor.py
fall_2025/CV/src/models/: stgcn.py
fall_2025/CV/src/utils/: config_loader.py
fall_2025/NLP/: README.md  __init__.py  beam_search.py
(+32 files in other folders)
